[package]
name = "termcolor2"
version = "0.1.0"
authors = [
  "Andrew Gallant <jamslam@gmail.com>",
  "0xJWLabs <0xjwlabs@gmail.com>",
]
description = """
A simple cross platform library for writing colored text to a terminal. (fork of termcolor)
"""
documentation = "https://docs.rs/termcolor2"
homepage = "https://github.com/win-rs/termcolor2"
repository = "https://github.com/win-rs/termcolor2"
readme = "README.md"
keywords = ["windows", "win", "color", "ansi", "console"]
license = "Unlicense OR MIT"
edition = "2021"

[lib]
name = "termcolor2"
bench = false

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.9"
